Increasing maintainability with a User control.

--- a/TextEditor/MainWindow.xaml
+++ b/TextEditor/MainWindow.xaml
@@ -9,18 +9,9 @@
     <DockPanel>
         <Menu x:Name="menu"
               DockPanel.Dock="Top" />
-
-        <ToolBarTray x:Name="toolbarTray"
-                     DockPanel.Dock="Top" >
-            <ToolBar>
-                <Button ToolTip="Open">
-                    <Image Source="Icons/folder_page.png" />
-                </Button>
-                <Button ToolTip="Save">
-                    <Image Source="Icons/page_save.png" />
-                </Button>
-            </ToolBar>
-        </ToolBarTray>
+        
+        <local:TextEditorToolbar x:Name="toolbar"
+                                 DockPanel.Dock="Top" />
 
         <StatusBar DockPanel.Dock="Bottom">
             <TextBlock x:Name="status" />
