--- a/TextEditor/MainWindow.xaml
+++ b/TextEditor/MainWindow.xaml
@@ -6,6 +6,10 @@
         xmlns:local="clr-namespace:TextEditor"
         mc:Ignorable="d"
         Title="Text Editor" Height="600" Width="800">
+    <Window.CommandBindings>
+        <CommandBinding Command="ApplicationCommands.New"
+                        Executed="NewDocument" />
+    </Window.CommandBindings>
     <DockPanel>
         <local:TextEditorMenu x:Name="menu"
                               DockPanel.Dock="Top" />
