--- a/TextEditor/TextEditorMenu.xaml
+++ b/TextEditor/TextEditorMenu.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Menu>
         <MenuItem Header="_File">
-            <MenuItem Header="_New" />
+            <MenuItem Command="ApplicationCommands.New"/>
             <MenuItem Header="_Open" />
             <MenuItem Header="_Save" />
             <MenuItem Header="Save As" />
@@ -13,13 +13,13 @@
             <MenuItem Header="Close" />
         </MenuItem>
         <MenuItem Header="_Edit">
-            <MenuItem Header="_Undo" />
-            <MenuItem Header="_Redo" />
+            <MenuItem Command="ApplicationCommands.Undo" />
+            <MenuItem Command="ApplicationCommands.Redo" />
             <Separator />
-            <MenuItem Header="Cu_t" />
-            <MenuItem Header="_Copy" />
-            <MenuItem Header="_Paste" />
-            <MenuItem Header="_Delete" />
+            <MenuItem Command="ApplicationCommands.Cut" />
+            <MenuItem Command="ApplicationCommands.Copy" />
+            <MenuItem Command="ApplicationCommands.Paste" />
+            <MenuItem Command="ApplicationCommands.Delete" />
         </MenuItem>
         <MenuItem Header="_Help">
             <MenuItem Header="_About"
